--- a/app/code/Packt/ProductSlider/view/frontend/templates/product/slider/list.phtml
+++ b/app/code/Packt/ProductSlider/view/frontend/templates/product/slider/list.phtml
@@ -8,7 +8,7 @@ $_helper = $this->helper('Magento\Catalog\Helper\Output');
     </div>
     <div class="block-content">
         <?php if (count($productCollection)): ?>
-            <div class="product-slider" style="display: flex">
+            <div class="product-slider">
                 <?php foreach ($productCollection as $product): ?>
                     <div class="product">
                         <div class="product-image">
@@ -30,12 +30,11 @@ $_helper = $this->helper('Magento\Catalog\Helper\Output');
 </div>
 
 <script type="text/javascript">
-
     require(['jquery', 'slick'], function($){
         $(function(){
             $('.product-slider').slick({
                 dots: false,
-                infinite: false,
+                infinite: true,
                 speed: 300,
                 slidesToShow: 5,
                 slidesToScroll: 5,
